[metadata]
name = briefcase
url = http://beeware.org/briefcase
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://briefcase.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/briefcase/issues
    Source = https://github.com/beeware/briefcase
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = Russell Keith-Magee
maintainer_email = russell@keith-magee.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities
license = New BSD
license_files =
    LICENSE
description = Tools to support converting a Python project into a standalone native application.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    app
    packaging
    installer
    macOS
    iOS
    android
    mobile
    windows
    tvOS
    watch
    watchOS
    wearos
    web
    pyscript
    pyodide
platforms = any

[options]
zip_safe = False
packages = find:
python_requires = >= 3.8
include_package_data = True
package_dir =
    = src
install_requires =
    # Dependencies required at runtime are set as ranges to ensure maximum
    # compatibility with the end-user's development environment.
    #
    # Any dependency that is part of the "core python toolchain" (e.g. pip,
    # wheel) specify a minimum version, but no maximum, because we always want
    # the most recent version.
    importlib_metadata >= 4.4; python_version <= "3.9"
    packaging >= 22.0
    pip >= 22
    setuptools >= 60
    wheel >= 0.37
    build >= 0.10
    # For the remaining packages: We set the lower version limit to the lowest
    # possible version that satisfies our API needs. If the package uses semver,
    # we set a limit to prevent the next major version (which will potentially
    # cause API breakages). If the package uses calver, we don't pin the upper
    # version, as the upper version provides no basis for determining API
    # stability.
    cookiecutter >= 2.1, < 3.0
    dmgbuild >= 1.6, < 2.0; sys_platform == "darwin"
    GitPython >= 3.1, < 4.0
    platformdirs >= 2.6, < 4.0
    psutil >= 5.9, < 6.0
    requests >= 2.28, < 3.0
    rich >= 12.6, < 14.0
    tomli >= 2.0, < 3.0; python_version <= "3.10"
    tomli_w >= 1.0, < 2.0

[options.extras_require]
# Extras used by developers *of* briefcase are pinned to specific versions to
# ensure environment consistency.
dev =
    coverage[toml] == 7.2.2
    pre-commit == 3.2.1
    pytest == 7.2.2
    pytest-tldr == 0.2.5
    setuptools_scm[toml] == 7.1.0
    tox == 4.4.11
docs =
    furo == 2023.3.27
    pyenchant == 3.2.2
    sphinx == 6.1.3
    sphinx_tabs == 3.4.1
    sphinx-autobuild == 2021.3.14
    sphinxcontrib-spelling == 8.0.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    briefcase = briefcase.__main__:main
briefcase.platforms =
    android = briefcase.platforms.android
    iOS = briefcase.platforms.iOS
    linux = briefcase.platforms.linux
    macOS = briefcase.platforms.macOS
    # tvOS = briefcase.platforms.tvOS
    # watchOS = briefcase.platforms.watchOS
    # wearos = briefcase.platforms.wearos
    web = briefcase.platforms.web
    windows = briefcase.platforms.windows
briefcase.formats.android =
    gradle = briefcase.platforms.android.gradle
briefcase.formats.iOS =
    xcode = briefcase.platforms.iOS.xcode
briefcase.formats.linux =
    appimage = briefcase.platforms.linux.appimage
    flatpak = briefcase.platforms.linux.flatpak
    system = briefcase.platforms.linux.system
    # snap = briefcase.platforms.linux.snap
briefcase.formats.macOS =
    app = briefcase.platforms.macOS.app
    xcode = briefcase.platforms.macOS.xcode
# briefcase.formats.tvOS =
#     xcode = briefcase.platforms.tvOS.xcode
# briefcase.formats.watchOS =
#     xcode = briefcase.platforms.watchOS.xcode
# briefcase.formats.wearos =
#     gradle = briefcase.platforms.wearos.gradle
briefcase.formats.web =
    static = briefcase.platforms.web.static
briefcase.formats.windows =
    app = briefcase.platforms.windows.app
    visualstudio = briefcase.platforms.windows.visualstudio

[aliases]
test=pytest

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    venv*/*,\
    local/*,\
    docs/*,\
    build/*,\
    tests/apps/*,\
    .eggs/*,\
    .tox/*
max-line-length = 119
extend-ignore =
    # whitespace before :
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
