[build-system]
requires = [
    # keep versions in sync with automation/pyproject.toml and ../pyproject.toml
    "setuptools==80.9.0",
    "setuptools_scm==8.3.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "briefcase-debugpy-debugger-support"
description = "Add-on for briefcase to add remote debugging via debugpy."
license = "BSD-3-Clause"
dependencies = [
    "debugpy>=1.8.14,<2.0.0"
]
dynamic = ["version"]

[tool.setuptools_scm]
root = "../../"
