[build-system]
requires = [
    # keep versions in sync with automation/pyproject.toml and ../pyproject.toml
    "setuptools==80.9.0",
    "setuptools_scm==8.3.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "briefcase-debugpy"
description = "Add-on for briefcase to add remote debugging via debugpy."
readme = "README.md"
license = "BSD-3-Clause"
dependencies = [
    "debugpy>=1.8.14,<2.0.0"
]
dynamic = ["version"]

[tool.setuptools_scm]
root = "../../"

[project.optional-dependencies]
dev = [
    "pytest == 8.4.1"
]
