[build-system]
requires = [
    # keep versions in sync with automation/pyproject.toml and ../pyproject.toml
    "setuptools==80.9.0",
    "setuptools_scm==8.3.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "briefcase-pdb"
description = "Add-on for briefcase to add remote debugging via pdb."
license = "BSD-3-Clause"
dependencies = [
    "remote-pdb>=2.1.0,<3.0.0"
]
dynamic = ["version"]

[tool.setuptools_scm]
root = "../../"
